Criando as paginas para navegação

--- a/src/app/encanto/encanto.page.html
+++ b/src/app/encanto/encanto.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Ron-Bugado</ion-title>
+    <ion-title>encanto</ion-title>
   </ion-toolbar>
 </ion-header>
 
