--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,4 +13,40 @@
     </ion-thumbnail>
     <ion-label><h4>Ron Bugado</h4></ion-label>
   </ion-item>
+
+  <ion-item routerLink = "/luca">
+    <ion-thumbnail slot="start">
+      <img  src="https://www.themoviedb.org/t/p/original/aayONGKooxHALoOC7rkC8WIKYhr.jpg" alt="">
+    </ion-thumbnail>
+    <ion-label><h4>Luca</h4></ion-label>
+  </ion-item>
+
+  <ion-item routerLink = "/encanto">
+    <ion-thumbnail slot="start">
+      <img  src="https://www.themoviedb.org/t/p/original/oBdS1Jap1wwuH166b8nZNZKSlml.jpg" alt="">
+    </ion-thumbnail>
+    <ion-label><h4>Encanto</h4></ion-label>
+  </ion-item>
+
+  <ion-item routerLink = "/red-crescer">
+    <ion-thumbnail slot="start">
+      <img  src="https://www.themoviedb.org/t/p/original/ghQLygaziVKGrocNPRJOztZNvQz.jpg" alt="">
+    </ion-thumbnail>
+    <ion-label><h4>Red Crescer é uma Fera</h4></ion-label>
+  </ion-item>
+
+  <ion-item routerLink = "/toy4">
+    <ion-thumbnail slot="start">
+      <img  src="https://www.themoviedb.org/t/p/original/AcEEuMoUl8MNoqQx7RkXLMWXBpx.jpg" alt="">
+    </ion-thumbnail>
+    <ion-label><h4>Toy Story 4</h4></ion-label>
+  </ion-item>
+
+  <ion-item routerLink = "/wifi-ralph">
+    <ion-thumbnail slot="start">
+      <img  src="https://www.themoviedb.org/t/p/original/rDWoFHrup2hXieLi1fxAyO0MrYx.jpg" alt="">
+    </ion-thumbnail>
+    <ion-label><h4>Wifi Ralph</h4></ion-label>
+  </ion-item>
+
 </ion-content>
