--- a/src/app/red-crescer/red-crescer.page.html
+++ b/src/app/red-crescer/red-crescer.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Ron-Bugado</ion-title>
+    <ion-title>red-crescer</ion-title>
   </ion-toolbar>
 </ion-header>
 
