--- a/src/app/toy4/toy4.page.html
+++ b/src/app/toy4/toy4.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Ron-Bugado</ion-title>
+    <ion-title>toy4</ion-title>
   </ion-toolbar>
 </ion-header>
 
