--- a/src/app/wifi-ralph/wifi-ralph.page.html
+++ b/src/app/wifi-ralph/wifi-ralph.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Ron-Bugado</ion-title>
+    <ion-title>wifi-ralph</ion-title>
   </ion-toolbar>
 </ion-header>
 
