Colocando a navegação para a página inicial

--- a/src/app/encanto/encanto.page.html
+++ b/src/app/encanto/encanto.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>encanto</ion-title>
+    <ion-title> <ion-icon name="arrow-back-outline" routerLink = "/home"></ion-icon>Encanto</ion-title>
   </ion-toolbar>
 </ion-header>
 
