--- a/src/app/luca/luca.page.html
+++ b/src/app/luca/luca.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>luca</ion-title>
+    <ion-title> <ion-icon name="arrow-back-outline" routerLink = "/home"></ion-icon>Luca</ion-title>
   </ion-toolbar>
 </ion-header>
 
