--- a/src/app/red-crescer/red-crescer.page.html
+++ b/src/app/red-crescer/red-crescer.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>red-crescer</ion-title>
+    <ion-title> <ion-icon name="arrow-back-outline" routerLink = "/home"></ion-icon>Red Crescer é Uma Fera</ion-title>
   </ion-toolbar>
 </ion-header>
 
