--- a/src/app/ron-bugado/ron-bugado.page.html
+++ b/src/app/ron-bugado/ron-bugado.page.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Ron-Bugado</ion-title>
+
+  <ion-title> <ion-icon name="arrow-back-outline" routerLink = "/home"></ion-icon> Ron-Bugado</ion-title>
   </ion-toolbar>
 </ion-header>
 
