--- a/src/app/wifi-ralph/wifi-ralph.page.html
+++ b/src/app/wifi-ralph/wifi-ralph.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>wifi-ralph</ion-title>
+    <ion-title> <ion-icon name="arrow-back-outline" routerLink = "/home"></ion-icon>Wifi Ralph</ion-title>
   </ion-toolbar>
 </ion-header>
 
